chore: ignore vscode directory

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@ tags
 # Octave
 octave-workspace
 
-# IDE
+# IDE or editor
 .idea/*
+.vscode/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
